cluster/ex1.yaml
---
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sRestrictRoleBindings
metadata:
  name: restrictrolebindings
spec:
  match:
    kind:
      - apiGroups: [""]
        kind: "ClusterRoleBinding"
  parameters:
    allowedSubjects:
      - apiGroup: "rbac.authorization.k8s.io"
        kind: "User"
        name: "vasanth"
    restrictedRole:
      apiGroup: "rbac.authorization.k8s.io"
      kind: "ClusterRole"
      name: "cluster-admin"
