cluster/hostnetworkingports-constraint.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sPSPHostNetworkingPorts
metadata:
  name: psp-host-network-ports
spec:
#  enforcementAction: dryrun
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
      - namespaceselector:
          matchExpressions:
            - { key: pod_security, operator: notIn, values: [exempt] }
  parameters:
    hostNetwork: false
#    hostnetwork: true
#    min: 80
#    max: 9000
