cluster/k8scapabilities-constraint.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sPSPCapabilities
metadata:
  name: capabilities
spec:
#  enforcementAction: dryrun
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
      - namespaceSelector:
          matchExpressions:
            - {key: pod_security, operator: notIn, values: [exempt]}
  parameters:
    requiredDropCapabilities: ["KILL","MKNOD","SYS_CHROOT"]
