cluster/k8spspvolume-constraint.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sPSPVolumeTypes
metadata:
  name: psp-volume-types
spec:
#  enforcementAction: dryrun
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
      - namespaceSelector:
          matchExpressions:
            - {key: pod_security, operator: notIn, values: [exempt]}
  parameters:
    volumes:
    # - "*" # * may be used to allow all volume types
      - configMap
      - downwardAPI
      - emptyDir
      - nfs
      - persistentVolumeClaim
      - projected
      - secret
#    #- hostPath #required for allowedHostPaths
#    - flexVolume #required for allowedFlexVolumes
