cluster/k8srequiredlabels-constraint.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sRequiredLabels
metadata:
  name: k8srequiredlabels
spec:
#  enforcementAction: dryrun
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Namespace"]
    excludedNamespaces: ["test", "test2", "test3"]
  parameters:
    labels:
      - key: "Labelname"
