cluster/restrict-clusteradmin-rolebindings.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sRestrictRoleBindings
metadata:
  name: googlers
  annotations:
    # This constraint is not certified by CIS.
    description: "Restricts use of the cluster-admin role."
spec:
#  enforcementAction: dryrun # {"$kpt-set":"enforcementAction"}
  parameters:
    restrictedRole:
      apiGroup: "rbac.authorization.k8s.io"
      kind: "ClusterRole"
      name: "cluster-admin"
    allowedSubjects:
      - apiGroup: "rbac.authorization.k8s.io"
        kind: "User"
        name: "vasanthkumar.kalali.ctr@sabre.com"
