cluster/restrictrolebinding-constraint.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sRestrictRoleBindings
metadata:
  name: restrict-clusteradmin-rolebindings
  annotations:
    description: "Restricts use of the cluster-admin role."
spec:
#  enforcementAction: dryrun
  match:
    kind:
      - apiGroups: ["*"]
        kind: ["ServiceAccount"]
  parameters:
    restrictedRole:
      apiGroup: "rbac.authorization.k8s.io"
      kind: "ClusterRoleBinding"
      name: "*"
    allowedSubjects:
#    - apiGroup: "rbac.authorization.k8s.io"
#      kind: "Group"
#      name: "system:serviceaccounts"
     - kind: ServiceAccount
       name: default
       namespace: default
