cluster/restrictrolebindings-constrant.yaml
---
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sRestrictRoleBindings
metadata:
  name: restrictrolebindings
spec:
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["ClusterRoleBinding"]
  parameters:
    allowedSubjects:
      - apiGroup: "rbac.authorization.k8s.io"
        kind: "User"
        name: "vasanth"
    restrictedRole:
      apiGroup: "rbac.authorization.k8s.io"
      kind: "ClusterRole"
      name: "*"
#      namespace: ""
#      name: "cluster-admin"
